# RemasteredCollegeProjects-TuringMachine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt
lib/src/: EndlessTape.cpp  EndlessTape.hpp  Program.cpp  Program.hpp  Tape.cpp  Tape.hpp  TuringMachine.cpp  TuringMachine.hpp
programs/: 3stateBusyBeaver.tmc  PalindromeDetector.tmc  ToInfinityAndBeyond.tmc
